<resources>
    <string name="app_name">YouTube Clone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="default_title">PDP</string>
    <string name="test">Test</string>
    <string name="_0">0</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="_100k_subscibe">100K subscibe</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="all">All</string>
    <string name="viewers_count">50.0K</string>
</resources>