<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:orientation="vertical"
    app:layoutDescription="@xml/activity_you_tube_scene"
    tools:context=".ui.YouTubeActivity">

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:autoPlay="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:videoId="ueC9Tem-Qag" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_190sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/youtube_player_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/title_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingStart="12dp"
                    android:paddingTop="14dp"
                    android:text="@string/default_title"
                    android:textColor="@color/black_dark"
                    android:textSize="20sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/views1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLines="3"
                    android:paddingStart="12dp"
                    android:text="@string/test"
                    android:textColor="@color/purple_200"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|top">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/arrow_borrom" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white">

            <ImageView
                android:id="@+id/like_icon"
                android:layout_width="22dp"
                android:layout_height="20dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_like_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/viewers_count"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/like_icon"
                app:layout_constraintRight_toRightOf="@id/like_icon"
                app:layout_constraintTop_toBottomOf="@id/like_icon" />

            <ImageView
                android:id="@+id/dis_like_icon"
                android:layout_width="22dp"
                android:layout_height="20dp"
                android:layout_marginStart="55dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_dis_like_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/like_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/_0"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/dis_like_icon"
                app:layout_constraintRight_toRightOf="@id/dis_like_icon"
                app:layout_constraintTop_toBottomOf="@id/dis_like_icon" />

            <ImageView
                android:id="@+id/share_icon"
                android:layout_width="22dp"
                android:layout_height="20dp"
                android:layout_marginStart="55dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_share_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/dis_like_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/share"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/share_icon"
                app:layout_constraintRight_toRightOf="@id/share_icon"
                app:layout_constraintTop_toBottomOf="@id/share_icon" />

            <ImageView
                android:id="@+id/download_icon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="55dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_download_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/share_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/download"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/download_icon"
                app:layout_constraintRight_toRightOf="@id/download_icon"
                app:layout_constraintTop_toBottomOf="@id/download_icon" />

            <ImageView
                android:id="@+id/save_icon"
                android:layout_width="22dp"
                android:layout_height="20dp"
                android:layout_marginStart="55dp"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_save_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/download_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/save"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/save_icon"
                app:layout_constraintRight_toRightOf="@id/save_icon"
                app:layout_constraintTop_toBottomOf="@id/save_icon" />

            <LinearLayout
                android:id="@+id/click1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/like_icon"
                app:layout_constraintLeft_toLeftOf="@id/like_icon"
                app:layout_constraintRight_toRightOf="@id/like_icon"
                app:layout_constraintTop_toTopOf="@id/like_icon" />

            <LinearLayout
                android:id="@+id/click2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/dis_like_icon"
                app:layout_constraintLeft_toLeftOf="@id/dis_like_icon"
                app:layout_constraintRight_toRightOf="@id/dis_like_icon"
                app:layout_constraintTop_toTopOf="@id/dis_like_icon" />

            <LinearLayout
                android:id="@+id/click3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/share_icon"
                app:layout_constraintLeft_toLeftOf="@id/share_icon"
                app:layout_constraintRight_toRightOf="@id/share_icon"
                app:layout_constraintTop_toTopOf="@id/share_icon" />

            <LinearLayout
                android:id="@+id/click4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/download_icon"
                app:layout_constraintLeft_toLeftOf="@id/download_icon"
                app:layout_constraintRight_toRightOf="@id/download_icon"
                app:layout_constraintTop_toTopOf="@id/download_icon" />

            <LinearLayout
                android:id="@+id/click5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/save_icon"
                app:layout_constraintLeft_toLeftOf="@id/save_icon"
                app:layout_constraintRight_toRightOf="@id/save_icon"
                app:layout_constraintTop_toTopOf="@id/save_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="0.7"
            android:background="@color/white"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="NestedWeights">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/logo"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/photo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/channel_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/default_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/views"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/_100k_subscibe"
                    android:textColor="#6C6C6C"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <TextView
                    android:id="@+id/subscribe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/subscribe"
                    android:textColor="#FF0000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:targetApi="m" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#E5E5E5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_video" />
    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>